--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,11 +1,13 @@
 :root {
     --white: white;
-    --muted-red: rgb(200, 98, 119);
+    --muted-blue: rgb(54, 54, 94);
     --light-purple: rgb(213, 194, 243);
     --grayish-purple: #8e74ab;
     --coffee-brown: #9F8170;
-    --dark-brown: #593c2c;
+    --medium-brown: #593c2c;
+    --dark-brown: #231711;
 }
+
 * {
     margin: 0;
     padding: 0;
@@ -26,7 +28,7 @@ header {
     display: flex;
     justify-content: space-between;
     position: -webkit-sticky;
-
+    border-bottom: 2px solid var(--medium-brown);
 }  
 
 header nav {
@@ -52,7 +54,7 @@ header ul li a {
     margin: 0;
     font-weight: bold;
     font-size: 20px;
-    color: var(--dark-brown);
+    color: var(--medium-brown);
 }
 
 a:hover {
@@ -72,6 +74,74 @@ a:hover {
     margin-top: 7px;
 }
 
-/* .hero {
+.hero {
+    background-color: var(--light-purple);
+    width: 100%;
+    vertical-align: middle;
+    display: flex;
+    justify-content: space-between;
+}
 
-} */
+.options {
+    margin: 50px;
+    width: 100%;
+    align-items: center;
+}
+
+.option-row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    list-style: none;
+}
+
+.option {
+    background-color: var(--grayish-purple);
+    color: var(--white);
+    box-shadow: 1px 1px gray;
+    font-size: 25px;
+    padding: 20px;
+    margin: 10px 20px;
+    border-radius: 4px;
+}
+
+.option-row .option-row-2 {
+    text-align: center;
+}
+
+.our-background {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    background-color: var(--white);
+}
+
+.bio-container {
+    margin: 20px;
+    background-color: var(--dark-brown);
+    color: var(--light-purple);
+    flex: 1;
+}
+
+.bio-container img {
+    width: 100%;
+}
+
+.section-title {
+    margin: 15px 0 0 0;
+}
+
+.bio {
+    padding: 25px;
+    line-height: 1.3;
+}
+
+.bio h3 {
+    font-size: 28px;
+}
+
+.bio p {
+    font-size: 17px;
+}
