finalized color scheme

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,6 +15,7 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+    align-items: center;
 }
 
 header {
@@ -48,7 +49,6 @@ header ul li {
 
 header ul li a {
     margin: 0;
-    font-weight: bold;
     font-size: 18px;
     color: var(--medium-brown);
 }
@@ -59,10 +59,13 @@ a:hover {
 }
 
 i {
-    color: var(--grayish-purple);
     padding-top: 20px;
     padding-bottom: 40px;
 }
+/* 
+footer {
+    text-align: center;
+} */
 
 .flex-container {
     display: inline-flex;
@@ -77,7 +80,7 @@ i {
 }
 
 .hero {
-    background-color: var(--light-purple);
+    background-color: var(--taupe);
     width: 100%;
     vertical-align: middle;
     display: flex;
@@ -91,7 +94,6 @@ i {
 }
 
 .card {
-    background-color: var(--white);
     /* box-shadow: 2px 2px #6d5976; */
     font-size: 25px;
     padding: 20px;
@@ -101,7 +103,7 @@ i {
     min-width: 250px;
     min-height: 250px;
     vertical-align: middle;
-    color: var(--grayish-purple);
+    color: var(--white);
 }
 
 .option-row {
@@ -112,13 +114,13 @@ i {
     text-align: center;
 }
 
-hero a {
+/* hero a {
     color: var(--white);
-}
+} */
 
 .title {
     padding-top: 10px;
-    /* font-weight: bold; */
+    font-weight: bold;
     font-size: 20px;
     padding: 5px 10px;
 }
@@ -129,19 +131,19 @@ hero a {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    background-color: var(--taupe);
+    background-color: var(--grayish-purple);
     color: var(--white);
     text-align: left;
 }
 
 .our-background h2 {
-    font-weight: bold;
+    /* font-weight: bold; */
     color: var(--white);
     padding: 10px;
     margin-top: 40px 20px 20px 20px;
     width: 100%;
     font-size: 20px;
-    border-bottom: 8px solid white;
+    border-bottom: 8px solid var(--white);
 }
 
 .bio-container {
@@ -173,16 +175,25 @@ hero a {
     font-size: 17px;
 }
 
+.find-us {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    background-color: var(--grayish-purple);
+    color: var(--white);
+    text-align: center;
+}
+
 .socials-container {
     padding: 0;
-    background-color: var(--white);
-    vertical-align: middle;
-    background-color: var(--grayish-purple);
+    align-items: center;
 }
 
 .socials-container h3 {
     padding: 20px;
-    text-align: center;
+    font-size: 18px;
 }
 
 .socials-list {
@@ -212,22 +223,32 @@ hero a {
 }
 
 #donation-option {
+    background-color: var(--grayish-purple);
+}
+
+/* #donation-option i, #donation-option a {
+    color: var(--light-purple);
+} */
+
+#story-option {
+    background-color: var(--light-purple);
+}
+
+#story-option i, #story-option a {
     color: var(--medium-brown);
 }
 
-#story-option {
-    color: var(--grayish-purple)
+#resource-option {
+    background-color: var(--medium-brown);
 }
 
-#resource-option {
-    color: var(--taupe);
-}
+/* #resource-option i, #resource-option a {
+    color: var(--light-purple);
+} */
 
 #social-header {
     padding-top: 10px;
     font-size: 20px;
     color: white;
     border-bottom: 7px solid white;
-    width: 30%;
-    text-align: center;
 }
