--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -19,6 +19,7 @@ body {
 
 header {
     padding: 0;
+    margin: 10px;
     background-color: white;
     width: 100%;
     vertical-align: middle;
@@ -126,7 +127,7 @@ footer {
     padding-top: 10px;
     font-weight: bold;
     font-size: 20px;
-    padding: 5px 10px;
+    padding: 15px 10px;
 }
 
 .our-background {
@@ -149,7 +150,7 @@ footer {
     /* font-weight: bold; */
     background-color: var(--white);
     color: var(--grayish-purple);
-    margin: 20px 0;
+    margin: 30px 0;
     font-size: 20px;
     border-bottom: 6px solid var(--grayish-purple);
     display: inline;
@@ -253,13 +254,38 @@ footer {
     color: var(--light-purple);
 }
 
+.about-page {
+    background-color: var(--light-purple);
+    color: var(--medium-brown);
+}
+
+.about-section {
+    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    color: var(---medium-brown);
+    margin: 20px;
+}
+
+.page-title {
+    margin: 20px 0 30px 0;
+    text-align: center;
+    font-size: 18px;
+}
+
+.page-title h2 {
+    color: var(--grayish-purple);
+    padding-bottom: 30px;
+    font-size: 25px;
+}
+
 #donation-option {
     background-color: var(--grayish-purple);
 }
 
-/* #donation-option i, #donation-option a {
+#donation-option i, #donation-option a {
     color: var(--light-purple);
-} */
+}
 
 #story-option {
     background-color: var(--light-purple);
@@ -269,8 +295,12 @@ footer {
     color: var(--medium-brown);
 }
 
-#resource-option {
+#mailing-option {
     background-color: var(--medium-brown);
+}
+
+#mailing-option i, #mailing-option a {
+    color: var(--white);
 }
 
 /* #resource-option i, #resource-option a {
