--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 }
 
 * {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   text-decoration: none;
 }
@@ -276,14 +276,7 @@ footer {
 .about-page {
   background-color: var(--light-purple);
   color: var(--medium-brown);
-}
-
-.about-section {
-  text-align: center;
-  display: flex;
-  flex-wrap: wrap;
-  color: var(---medium-brown);
-  margin: 20px;
+  padding: 10px 0;
 }
 
 .page-title {
@@ -296,6 +289,32 @@ footer {
   color: var(--grayish-purple);
   padding-bottom: 30px;
   font-size: 25px;
+}
+
+.about-section {
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  color: var(---medium-brown);
+  margin: 10px;
+  padding-bottom: 15px;
+  border-radius: 4px;
+}
+
+.about-section h2 {
+  font-size: 25px;
+  width: 100%;
+  text-align: center;
+  color: var(--grayish-purple);
+  text-shadow: 1px 1px white; 
+}
+
+.about-section p {
+  background-color: var(--grayish-purple);
+  color: var(--white);
+  padding: 30px;
+  border-radius: 5px;
+  box-shadow: 1px 1px white;
 }
 
 /* .figure out which element to hover over:hover {
