--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,15 @@
   --taupe: #d6cfcc;
 }
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 * {
   margin: 0 auto;
   padding: 0;
@@ -63,6 +72,32 @@ i {
   padding-top: 20px;
   padding-bottom: 40px;
 }
+
+form {
+  width: 60vw;
+  max-width: 500px;
+  min-width: 300px;
+  margin: 0 auto;
+  padding-bottom: 2em;
+}
+
+label {
+  display: block;
+  margin: 0.5rem 0;
+}
+
+input {
+  margin: 10px 0 0 0;
+  width: 100%;
+  min-height: 2em;
+}
+
+textarea {
+  margin: 10px 0 0 0;
+  width: 100%;
+  min-height: 2em;
+}
+
 /* 
 footer {
   text-align: center;
@@ -218,9 +253,7 @@ footer {
 }
 
 .socials-title {
-  background-color: var(--white);
   color: var(--medium-brown);
-  margin: 20px 0;
   font-size: 20px;
   border-bottom: 6px solid var(--medium-brown);
   display: inline;
@@ -273,12 +306,6 @@ footer {
   color: var(--light-purple);
 }
 
-.about-page {
-  background-color: var(--light-purple);
-  color: var(--medium-brown);
-  padding: 10px 0;
-}
-
 .page-title {
   margin: 20px 0 30px 0;
   text-align: center;
@@ -289,6 +316,10 @@ footer {
   color: var(--grayish-purple);
   padding-bottom: 30px;
   font-size: 25px;
+}
+
+.about-page {
+  padding: 10px 0;
 }
 
 .about-section {
@@ -314,7 +345,12 @@ footer {
   color: var(--white);
   padding: 30px;
   border-radius: 5px;
-  box-shadow: 1px 1px white;
+  box-shadow: 3px 3px var(--light-purple);
+}
+
+.footer-container {
+  background-color: var(--taupe);
+  padding: 15px 0;
 }
 
 /* .figure out which element to hover over:hover {
@@ -327,7 +363,7 @@ footer {
   background-color: var(--grayish-purple);
 }
 
-#donation-option i, #donation-option a {
+#donation-option i, #donation-option p {
   color: var(--light-purple);
 }
 
@@ -335,7 +371,7 @@ footer {
   background-color: var(--light-purple);
 }
 
-#story-option i, #story-option a {
+#story-option i, #story-option p {
   color: var(--medium-brown);
 }
 
@@ -343,7 +379,7 @@ footer {
   background-color: var(--medium-brown);
 }
 
-#mailing-option i, #mailing-option a {
+#mailing-option i, #mailing-option p {
   color: var(--white);
 }
 
@@ -360,4 +396,10 @@ footer {
 
 #contact {
   margin: 50px 30px 30px 30px;
+}
+
+#contact-title {
+  width: 100%;
+  text-align: center;
+  color: var(--grayish-purple);
 }
